Add "--add-exports" due to MicroStream restrictions. (#238)